--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
   --primary-white-color: #ffffff;
   --light-mode-color: #f4f4fd;
   --accent-color: #e7e9fc;
+  --icon-color: #8e8f99;
+  --success-color: #31d0aa;
 }
 
 body {
@@ -84,6 +86,7 @@ ol {
 
 .section {
   padding: 120px 0;
+  margin: 0 auto;
 }
 
 /**
@@ -194,10 +197,19 @@ ol {
   color: var(--primary-white-color);
 }
 
-.hero.section {
-  background-color: var(--headings-color);
+.hero-container {
   padding: 188px 0;
+  max-width: 1440px;
   margin: 0 auto;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/background/hero-background.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: var(--headings-color);
 }
 
 .modal-button {
@@ -232,6 +244,15 @@ ol {
   min-width: 264px;
 }
 
+.feature-wrapper {
+  display: flex;
+  min-height: 112px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+  background-color: #f4f4fd;
+}
+
 /**
   |============================
   | SERVICES
@@ -262,8 +283,10 @@ ol {
   gap: 24px;
 }
 
-.team-list-item {
+.team-item {
   width: calc((100% - 72px) / 4);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-card {
@@ -275,8 +298,65 @@ ol {
 .team-subtitle,
 .team-description {
   text-align: center;
+  margin-bottom: 8px;
 }
 
+.team-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.team-social-link {
+  background-color: var(--primary-brand-color);
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+  background-color: var(--pressed-state-color);
+}
+
+/**
+  |============================
+  | CUSTOMERS
+  |============================
+*/
+
+.customers {
+}
+
+.customers-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.customers-link {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 16px 32px;
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
+  color: var(--icon-color);
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  color: var(--pressed-state-color);
+  border: 1px solid var(--pressed-state-color);
+}
+.customers-logo {
+  fill: currentColor;
+}
 /**
   |============================
   | FOOTER
@@ -292,15 +372,46 @@ ol {
   display: inline-block;
   margin-bottom: 16px;
 }
+
+.footer-container {
+  display: flex;
+  gap: 120px;
+  align-items: flex-start;
+}
+
 .footer .logo-accent {
   color: var(--light-mode-color);
 }
 
-.footer-description {
+.footer-slogan {
   width: 264px;
   color: var(--light-mode-color);
 }
 
+.footer-right-wrapper {
+}
+
+.footer-text {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  color: var(--primary-white-color);
+}
+
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+
+.footer-social-link {
+  background-color: var(--primary-brand-color);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--success-color);
+}
 /**
   |============================
   | PORTFOLIO
@@ -321,8 +432,7 @@ ol {
 .filter-button {
   color: var(--primary-brand-color);
   background-color: var(--light-mode-color);
-  padding: 12px 24px;
-  /* переделать на 11 23 */
+  padding: 11px 23px;
   border: 1px solid var(--accent-color);
   border-radius: 4px;
 }
@@ -333,6 +443,8 @@ ol {
   color: var(--primary-white-color);
   background: var(--pressed-state-color);
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list {
@@ -348,8 +460,18 @@ ol {
 
 .portfolio-card {
   padding: 32px 16px;
-  border: 1px solid var(--accent-color);
   border-top: none;
+}
+
+.portfolio-card-wrapper {
+  border: 1px solid var(--accent-color);
+}
+
+.portfolio-link:hover .portfolio-card-wrapper,
+.portfolio-link:focus .portfolio-card-wrapper {
+  border: 1px solid var(--light-mode-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-description {
