--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,8 @@ ol {
 
 .header {
   border-bottom: 1px solid var(--accent-color);
+  box-shadow: 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -197,7 +199,7 @@ ol {
   color: var(--primary-white-color);
 }
 
-.hero-container {
+.hero-section {
   padding: 188px 0;
   max-width: 1440px;
   margin: 0 auto;
@@ -249,6 +251,7 @@ ol {
   min-height: 112px;
   justify-content: center;
   align-items: center;
+  border-radius: 4px;
   margin-bottom: 8px;
   background-color: #f4f4fd;
 }
@@ -285,12 +288,13 @@ ol {
 
 .team-item {
   width: calc((100% - 72px) / 4);
+  border-radius: 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-card {
-  padding: 32px 16px;
+  padding: 32px 0;
   border-radius: 0px 0px 4px 4px;
   background: var(--primary-white-color);
 }
@@ -305,6 +309,10 @@ ol {
   display: flex;
   justify-content: center;
   gap: 24px;
+}
+
+.social-icon {
+  fill: var(--light-mode-color);
 }
 
 .social-link {
@@ -331,19 +339,24 @@ ol {
   |============================
 */
 
-.customers {
-}
-
 .customers-list {
   display: flex;
   gap: 24px;
   justify-content: center;
 }
 
+.customers-item {
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+
 .customers-link {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding: 16px 32px;
+  align-items: center;
+  justify-content: center;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   color: var(--icon-color);
@@ -375,8 +388,7 @@ ol {
 
 .footer-container {
   display: flex;
-  gap: 120px;
-  align-items: flex-start;
+  align-items: baseline;
 }
 
 .footer .logo-accent {
@@ -388,7 +400,8 @@ ol {
   color: var(--light-mode-color);
 }
 
-.footer-right-wrapper {
+.footer-left-wrapper {
+  margin-right: 120px;
 }
 
 .footer-text {
@@ -463,12 +476,13 @@ ol {
   border-top: none;
 }
 
-.portfolio-card-wrapper {
+.portfolio-link {
+  display: block;
   border: 1px solid var(--accent-color);
 }
 
-.portfolio-link:hover .portfolio-card-wrapper,
-.portfolio-link:focus .portfolio-card-wrapper {
+.portfolio-link:hover,
+.portfolio-link:focus {
   border: 1px solid var(--light-mode-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
